<resources>
    <string name="app_name">Popular Movies</string>
    <string name="movie_poster_description">Movie Poster</string>
    <string name="movie_title_description">Movie Title</string>
    <string name="example_movie_title">Movie Title That Turns Out To Be Horribly Long</string>
    <string name="title_activity_internet_error">InternetError</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="sort_popular">Sort: Popular</string>
    <string name="sort_highest_rated">Sort: Highest Rated</string>
    <string name="toggle_titles">Toggle Titles</string>
    <string name="larger">Larger</string>
    <string name="smaller">Smaller</string>
    <string name="ratingLabel">Rating:</string>
    <string name="release_date">Release Date:</string>
    <string name="header_content_description">Background image for movie</string>
    <string name="details_poster_content_description">Movie poster</string>
    <string name="title_popular">Popular Movies</string>
    <string name="title_highest_rated">Highest Rated Movies</string>
    <string name="toast_sort_popular">Sorting by popularity</string>
    <string name="toast_sort_highest_rated">Sorting by highest rated</string>
    <string name="toast_toggle_titles">Toggling title text</string>
    <string name="ReviewsCount">No Reviews</string>
    <plurals name="numberOfReviews">
        <item quantity="one">%d Review</item>
        <item quantity="other">%d Reviews</item>
    </plurals>
    <plurals name="numberOfVideos">
        <item quantity="one">%d Video</item>
        <item quantity="other">%d Videos</item>
    </plurals>
    <string name="video_component_tag">video_container</string>
</resources>
